# py-sccdc

./: .gitignore  README.md  pyproject.toml
examples/: benchmark.py  compare_R_vs_Python.executed.ipynb  compare_R_vs_Python.ipynb  r_driver_sccdc.R  tutorial_standalone.py
pysccdc/: __init__.py  _anndata.py  correction.py  datasets.py  detection.py  entropy.py  spline.py
tests/: r_reference_driver.R  test_r_parity.py  test_smoke.py
